fix overflow issue.

--- a/frontend/footer.css
+++ b/frontend/footer.css
@@ -5,6 +5,7 @@
     margin-top: 4em;
     padding: 20px 0;
     background-color: white;
+    z-index: 100;
 }
 
 .social {
